--- a/Assignments - Case Studies etc/Table Tasks/Team1-Kalyani-Rajesh/source/table-assign 2.html
+++ b/Assignments - Case Studies etc/Table Tasks/Team1-Kalyani-Rajesh/source/table-assign 2.html
@@ -20,6 +20,11 @@ table
 		border-collapse:collapse;
 		border-color:white;
 	}
+#corners1 
+	{
+		border: 2px;
+		border-top-left-radius:25px;
+	}
 .border1
 	{
 		border-top: 10px solid black;
@@ -40,7 +45,7 @@ th, td
 <table style="width:35%;">
 <tr class="border1"> 
 	<th></th>
-	<th style="background-color:#a8a5a3"><h2>Basic<p style="font-size:10px;">Always FREE</p></h2></th>
+	<th style="background-color:#a8a5a3" id="corners1"><h2>Basic<p style="font-size:10px;">Always FREE</p></h2></th>
 	<th style="background-color:#a8a5a3"><h2>Individual<p style="font-size:10px;">&#36;6&#47;month</p></h2></th>
 	<th style="background-color:#8CF58C"><h2>Team<p style="font-size:10px;">&#36;25&#47;month</p></h2></th>
 </tr>
