--- a/Module II Source/Angular/AngProj1/my-tourism-web/src/index.html
+++ b/Module II Source/Angular/AngProj1/my-tourism-web/src/index.html
@@ -7,9 +7,10 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" href="styles.css" >
 </head>
 <body>
-  <!--<app-root></app-root>-->
-  <app-my-new-component></app-my-new-component>
+    <app-contactcomponent></app-contactcomponent>
+ 
 </body>
 </html>
