just changes the text in button

--- a/Tourism Project/disclaimer.html
+++ b/Tourism Project/disclaimer.html
@@ -61,7 +61,7 @@
       <a class="nav-link" href="#">Videos</a>
     </li>
 	<li class="nav-item">
-      <a class="nav-link" href="contact_us.html">Contact Us</a>
+      <a class="nav-link" href="contact_us.html">Contact Us right key</a>
     </li>
 	<li class="nav-item dropdown" >
       <a class="nav-link dropdown-toggle"  id="navbardrop" data-toggle="dropdown"  data-target="dropdown-target" href="#" >
